# yttrium

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build_keys.sh  test.sh
ars_generator/: Cargo.toml
ars_generator/src/: main.rs
docs/: arrays.md  compilation_steps.md  databases.md  index.md  key_list.md  outline.md  todo  tree_format.md
key_base/: Cargo.toml
key_base/src/: databases.rs  embed.rs  environment.rs  events.rs  lib.rs  main.rs  regexes.rs
src/: ars.rs  environment.rs  errors_and_warns.rs  interpreter.rs  key_loader.rs  lib.rs  main.rs  tokenizer.rs  tree_creator.rs
src/keys/: std_attach.rs  std_ban.rs  std_channel.rs  std_db_read.rs  std_db_write_str.rs  std_delete.rs  std_embed.rs  std_everyone.rs  std_guild.rs  std_hasrole.rs  std_joined.rs  std_kick.rs  std_mention.rs  std_next.rs  std_parameter.rs  std_pin.rs  std_rand.rs  std_react.rs  std_redirect.rs  std_role.rs  std_selfdelete.rs  std_selfreact.rs  std_setnickname.rs  std_sleep.rs  std_take.rs  std_text.rs  std_trigger.rs  std_user.rs
std_attach/: Cargo.toml
std_attach/src/: lib.rs
std_ban/: Cargo.toml
std_ban/src/: lib.rs
std_channel/: Cargo.toml
std_channel/src/: lib.rs
std_database_exists/: Cargo.toml
std_database_exists/src/: lib.rs
std_db_read/: Cargo.toml
std_db_read/src/: lib.rs
std_db_write_str/: Cargo.toml
std_db_write_str/src/: lib.rs
std_delete/: Cargo.toml
std_delete/src/: lib.rs
std_everyone/: Cargo.toml
std_everyone/src/: lib.rs
std_guild/: Cargo.toml
std_guild/src/: lib.rs
std_hasrole/: Cargo.toml
std_hasrole/src/: lib.rs
std_joined/: Cargo.toml  Makefile.toml
std_joined/src/: lib.rs
std_key_cond/: Cargo.toml
std_key_cond/src/: lib.rs
std_kick/: Cargo.toml
std_kick/src/: lib.rs
std_match/: Cargo.toml
std_match/src/: lib.rs
std_math/: Cargo.toml  build.rs
std_math/cpp/: qalc.cpp  qalc.hpp
std_math/src/: lib.rs
std_mention/: Cargo.toml
std_mention/src/: lib.rs
std_parameter/: Cargo.toml
std_parameter/src/: lib.rs
std_pin/: Cargo.toml
std_pin/src/: lib.rs
std_rand/: Cargo.toml
std_rand/src/: lib.rs
std_redirect/: Cargo.toml
std_redirect/src/: lib.rs
std_role/: Cargo.toml
std_role/src/: lib.rs
std_selfdelete/: Cargo.toml
std_selfdelete/src/: lib.rs
std_selfreact/: Cargo.toml
std_selfreact/src/: lib.rs
std_setnickname/: Cargo.toml
std_setnickname/src/: lib.rs
std_sleep/: Cargo.toml
std_sleep/src/: lib.rs
std_take/: Cargo.toml
std_take/src/: lib.rs
std_text/: Cargo.toml  Makefile.toml
std_text/src/: lib.rs
std_text_equals/: Cargo.toml
std_text_equals/src/: lib.rs
std_trigger/: Cargo.toml
std_trigger/src/: lib.rs
std_user/: Cargo.toml
std_user/src/: lib.rs
yttrium_key_base/: Cargo.toml
yttrium_key_base/src/: databases.rs  environment.rs  events.rs  lib.rs
yttrium_std_attach/: Cargo.toml
yttrium_std_attach/src/: lib.rs
yttrium_std_ban/: Cargo.toml
yttrium_std_ban/src/: lib.rs
yttrium_std_channel/: Cargo.toml
yttrium_std_channel/src/: lib.rs
yttrium_std_database_exists/: Cargo.toml
yttrium_std_database_exists/src/: lib.rs
yttrium_std_db_read/: Cargo.toml
yttrium_std_db_read/src/: lib.rs
yttrium_std_db_write_str/: Cargo.toml
yttrium_std_db_write_str/src/: lib.rs
yttrium_std_delete/: Cargo.toml
yttrium_std_delete/src/: lib.rs
yttrium_std_everyone/: Cargo.toml
yttrium_std_everyone/src/: lib.rs
yttrium_std_guild/: Cargo.toml
yttrium_std_guild/src/: lib.rs
yttrium_std_hasrole/: Cargo.toml
yttrium_std_hasrole/src/: lib.rs
yttrium_std_joined/: Cargo.toml
yttrium_std_joined/src/: lib.rs
yttrium_std_kick/: Cargo.toml
yttrium_std_kick/src/: lib.rs
yttrium_std_math/: Cargo.toml  build.rs
yttrium_std_math/cpp/: qalc.hpp
yttrium_std_math/src/: lib.rs
yttrium_std_mention/: Cargo.toml
yttrium_std_mention/src/: lib.rs
yttrium_std_parameter/: Cargo.toml
yttrium_std_parameter/src/: lib.rs
yttrium_std_pin/: Cargo.toml
yttrium_std_pin/src/: lib.rs
yttrium_std_rand/: Cargo.toml
yttrium_std_rand/src/: lib.rs
yttrium_std_redirect/: Cargo.toml
yttrium_std_redirect/src/: lib.rs
yttrium_std_role/: Cargo.toml
yttrium_std_role/src/: lib.rs
yttrium_std_selfdelete/: Cargo.toml
yttrium_std_selfdelete/src/: lib.rs
yttrium_std_selfreact/: Cargo.toml
yttrium_std_selfreact/src/: lib.rs
yttrium_std_setnickname/: Cargo.toml
yttrium_std_setnickname/src/: lib.rs
yttrium_std_sleep/: Cargo.toml
yttrium_std_sleep/src/: lib.rs
yttrium_std_take/: Cargo.toml
yttrium_std_take/src/: lib.rs
yttrium_std_text/: Cargo.toml
yttrium_std_text/src/: lib.rs
yttrium_std_trigger/: Cargo.toml
yttrium_std_trigger/src/: lib.rs
yttrium_std_user/: Cargo.toml
yttrium_std_user/src/: lib.rs
