[package]
name = "yttrium"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"
license = "MPL"
description = "Library for parsing ARS code, inspired by the echo discord bot"
homepage = "https://adamski234.github.io/yttrium"
repository = "https://github.com/adamski234/yttrium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yttrium_key_base = { version = "*", path = "./yttrium_key_base" }
serde_json = "1"
serenity = "0.9"
futures = "0.3"
libloading = { version = "0.6", optional = true }
# All the keys for a one file build
yttrium_std_db_read = { version = "*", path = "./yttrium_std_db_read", optional = true }
yttrium_std_db_write_str = { version = "*", path = "./yttrium_std_db_write_str", optional = true }
yttrium_std_redirect = { version = "*", path = "./yttrium_std_redirect", optional = true }
yttrium_std_sleep = { version = "*", path = "./yttrium_std_sleep", optional = true }
yttrium_std_math = { version = "*", path = "./yttrium_std_math", optional = true }
yttrium_std_attach = { version = "*", path = "./yttrium_std_attach", optional = true }
yttrium_std_setnickname = { version = "*", path = "./yttrium_std_setnickname", optional = true }
yttrium_std_pin = { version = "*", path = "./yttrium_std_pin", optional = true }
yttrium_std_trigger = { version = "*", path = "./yttrium_std_trigger", optional = true }
yttrium_std_take = { version = "*", path = "./yttrium_std_take", optional = true }
yttrium_std_role = { version = "*", path = "./yttrium_std_role", optional = true }
yttrium_std_ban = { version = "*", path = "./yttrium_std_ban", optional = true }
yttrium_std_kick = { version = "*", path = "./yttrium_std_kick", optional = true }
yttrium_std_guild = { version = "*", path = "./yttrium_std_guild", optional = true }
yttrium_std_delete = { version = "*", path = "./yttrium_std_delete", optional = true }
yttrium_std_selfdelete = { version = "*", path = "./yttrium_std_selfdelete", optional = true }
yttrium_std_selfreact = { version = "*", path = "./yttrium_std_selfreact", optional = true }
yttrium_std_joined = { version = "*", path = "./yttrium_std_joined", optional = true }
yttrium_std_channel = { version = "*", path = "./yttrium_std_channel", optional = true }
yttrium_std_mention = { version = "*", path = "./yttrium_std_mention", optional = true }
yttrium_std_user = { version = "*", path = "./yttrium_std_user", optional = true }
yttrium_std_rand = { version = "*", path = "./yttrium_std_rand", optional = true }
yttrium_std_everyone = { version = "*", path = "./yttrium_std_everyone", optional = true }
yttrium_std_database_exists = { version = "*", path = "./yttrium_std_database_exists", optional = true }
yttrium_std_parameter = { version = "*", path = "./yttrium_std_parameter", optional = true }
yttrium_std_text = { version = "*", path = "./yttrium_std_text", optional = true }
yttrium_std_hasrole = { version = "*", path = "./yttrium_std_hasrole", optional = true }

[workspace]
members = [
    "ars_generator",
    "yttrium_key_base",
    "yttrium_std_db_read",
    "yttrium_std_db_write_str",
    "yttrium_std_redirect",
    "yttrium_std_sleep",
    "yttrium_std_math",
    "yttrium_std_attach",
    "yttrium_std_setnickname",
    "yttrium_std_pin",
    "yttrium_std_trigger",
    "yttrium_std_take",
    "yttrium_std_role",
    "yttrium_std_ban",
    "yttrium_std_kick",
    "yttrium_std_guild",
    "yttrium_std_delete",
    "yttrium_std_selfdelete",
    "yttrium_std_selfreact",
    "yttrium_std_joined",
    "yttrium_std_channel",
    "yttrium_std_mention",
    "yttrium_std_user",
    "yttrium_std_rand",
    "yttrium_std_everyone",
    "yttrium_std_database_exists",
    "yttrium_std_parameter",
    "yttrium_std_text",
    "yttrium_std_hasrole",
]

[features]
single-file = [
    "yttrium_std_db_read",
    "yttrium_std_db_write_str",
    "yttrium_std_redirect",
    "yttrium_std_sleep",
    "yttrium_std_math",
    "yttrium_std_attach",
    "yttrium_std_setnickname",
    "yttrium_std_pin",
    "yttrium_std_trigger",
    "yttrium_std_take",
    "yttrium_std_role",
    "yttrium_std_ban",
    "yttrium_std_kick",
    "yttrium_std_guild",
    "yttrium_std_delete",
    "yttrium_std_selfdelete",
    "yttrium_std_selfreact",
    "yttrium_std_joined",
    "yttrium_std_channel",
    "yttrium_std_mention",
    "yttrium_std_user",
    "yttrium_std_rand",
    "yttrium_std_everyone",
    "yttrium_std_database_exists",
    "yttrium_std_parameter",
    "yttrium_std_text",
    "yttrium_std_hasrole",
]
loader = ["libloading"]
default = ["single-file"]
