[package]
name = "yttrium"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Library for parsing ARS code, inspired by the echo discord bot"
homepage = "https://adamski234.github.io/yttrium"
repository = "https://github.com/adamski234/yttrium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yttrium_key_base = { version = "0.1", path = "./yttrium_key_base" }
serde_json = "1"
serenity = "0.9"
futures = "0.3"
yttrium_std_attach = { version = "0.1", path = "./yttrium_std_attach" }
yttrium_std_ban = { version = "0.1", path = "./yttrium_std_ban" }
yttrium_std_channel = { version = "0.1", path = "./yttrium_std_channel" }
yttrium_std_database_exists = { version = "0.1", path = "./yttrium_std_database_exists" }
yttrium_std_db_read = { version = "0.1", path = "./yttrium_std_db_read" }
yttrium_std_db_write_str = { version = "0.1", path = "./yttrium_std_db_write_str" }
yttrium_std_delete = { version = "0.1", path = "./yttrium_std_delete" }
yttrium_std_everyone = { version = "0.1", path = "./yttrium_std_everyone" }
yttrium_std_guild = { version = "0.1", path = "./yttrium_std_guild" }
yttrium_std_hasrole = { version = "0.1", path = "./yttrium_std_hasrole" }
yttrium_std_joined = { version = "0.1", path = "./yttrium_std_joined" }
yttrium_std_kick = { version = "0.1", path = "./yttrium_std_kick" }
yttrium_std_math = { version = "0.1", path = "./yttrium_std_math" }
yttrium_std_mention = { version = "0.1", path = "./yttrium_std_mention" }
yttrium_std_parameter = { version = "0.1", path = "./yttrium_std_parameter" }
yttrium_std_pin = { version = "0.1", path = "./yttrium_std_pin" }
yttrium_std_rand = { version = "0.1", path = "./yttrium_std_rand" }
yttrium_std_redirect = { version = "0.1", path = "./yttrium_std_redirect" }
yttrium_std_role = { version = "0.1", path = "./yttrium_std_role" }
yttrium_std_selfdelete = { version = "0.1", path = "./yttrium_std_selfdelete" }
yttrium_std_selfreact = { version = "0.1", path = "./yttrium_std_selfreact" }
yttrium_std_setnickname = { version = "0.1", path = "./yttrium_std_setnickname" }
yttrium_std_sleep = { version = "0.1", path = "./yttrium_std_sleep" }
yttrium_std_take = { version = "0.1", path = "./yttrium_std_take" }
yttrium_std_text = { version = "0.1", path = "./yttrium_std_text" }
yttrium_std_trigger = { version = "0.1", path = "./yttrium_std_trigger" }
yttrium_std_user = { version = "0.1", path = "./yttrium_std_user" }

[workspace]
members = [
    "yttrium_key_base",
    "yttrium_std_db_read",
    "yttrium_std_db_write_str",
    "yttrium_std_redirect",
    "yttrium_std_sleep",
    "yttrium_std_math",
    "yttrium_std_attach",
    "yttrium_std_setnickname",
    "yttrium_std_pin",
    "yttrium_std_trigger",
    "yttrium_std_take",
    "yttrium_std_role",
    "yttrium_std_ban",
    "yttrium_std_kick",
    "yttrium_std_guild",
    "yttrium_std_delete",
    "yttrium_std_selfdelete",
    "yttrium_std_selfreact",
    "yttrium_std_joined",
    "yttrium_std_channel",
    "yttrium_std_mention",
    "yttrium_std_user",
    "yttrium_std_rand",
    "yttrium_std_everyone",
    "yttrium_std_database_exists",
    "yttrium_std_parameter",
    "yttrium_std_text",
    "yttrium_std_hasrole",
]