[package]
name = "yttrium"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Library for parsing ARS code, inspired by the echo discord bot"
homepage = "https://adamski234.github.io/yttrium"
repository = "https://github.com/adamski234/yttrium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yttrium_key_base = { version = "0.1", path = "./yttrium_key_base" }
serenity = "0.10"
futures = "0.3"
rand = "0.8"
regex = "1.4"
humantime = "2"
unicode-segmentation = "1.7"
glob = "0.3"
tokio = "1"
# Math is too hard to figure out to be kept in the main source tree
yttrium_std_math = { version = "0.1", path = "./yttrium_std_math" }

[workspace]
members = [
    "yttrium_std_math",
]