[package]
name = "std_channel"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key_base = { path = "../key_base" }
regex = "1.4"
serenity = "0.9"
futures = "0.3"

[features]
loader = []
