[package]
name = "std_pin"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key_base = { path = "../key_base" }
serenity = { version = "0.9", default-features = false, features = ["http", "model", "gateway", "cache"] }
futures = "0.3"