[package]
name = "std_take"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key_base = { path = "../key_base" }
serenity = "0.9"
futures = "0.3"
regex = "1.4"

[features]
loader = []
