[package]
name = "yttrium_key_base"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Common functionality shared between Yttrium and its plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serenity = "0.9"

[dev-dependencies]
regex = "1"
