[package]
name = "yttrium_std_math"
version = "1.0.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Plugin for the Yttrium project"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yttrium_key_base = { version = "1.0", path = "../yttrium_key_base" }
serenity = "0.10"
cxx = "1"

[build-dependencies]
cxx-build = "1"