[package]
name = "yttrium_std_mention"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Plugin for the Yttrium project"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yttrium_key_base = { version = "0.1", path = "../yttrium_key_base" }
serenity = "0.9"
futures = "0.3"

[features]
loader = []
